Edit Listing1-2, Add Listing1-3, 1-4

--- a/Listing1-2-LoggingVariables.html
+++ b/Listing1-2-LoggingVariables.html
@@ -4,8 +4,12 @@
 </head>
 <body>
   <script>
-    var foo = "My first JS";
+    var foo = "Hello JS";
     console.log(foo);
+	
+	var first = 'first value';
+	var second = 'second value';
+	console.log("First is: ", first, " Second is: ", second);
   </script>
 </body>
 </html>
