--- a/Listing1-1-ConsoleLog-HelloWorld.html
+++ b/Listing1-1-ConsoleLog-HelloWorld.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+
+<html>
 <head>
-  <title>zhamppx97</title>
+    <title>zhamppx97</title>
 </head>
 <body>
-  <script>
-    console.log('Hello World!');
-  </script>
+    <script>
+        console.log('Hello World!');
+    </script>
 </body>
 </html>
