--- a/Listing1-2-LoggingVariables.html
+++ b/Listing1-2-LoggingVariables.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
+
+<html>
 <head>
-  <title>zhamppx97</title>
+    <title>zhamppx97</title>
 </head>
 <body>
-  <script>
-    var foo = "Hello JS";
-    console.log(foo);
-	
-	var first = 'first value';
-	var second = 'second value';
-	console.log("First is: ", first, " Second is: ", second);
-  </script>
+    <script>
+        var foo = "Hello JS";
+        console.log(foo);
+
+        var first = 'first value';
+        var second = 'second value';
+        console.log("First is: ", first, " Second is: ", second);
+    </script>
 </body>
 </html>
