--- a/Listing1-4-LoggingObjects.html
+++ b/Listing1-4-LoggingObjects.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
+
+<html>
 <head>
-  <title>zhamppx97</title>
+    <title>zhamppx97</title>
 </head>
 <body>
-  <script>
-    console.log({
-		'Email': 'zhamppx.wrp@gmail.com',
-		'Groups': {},
-		'Id': 97,
-		'IsHidddenInUI': false,
-		'IsSiteAdmin': false,
-		'LoginName': 'i:0#.w|virtualdomain\\user1',
-		'PrincipalType': 1,
-		'Title': 'user1'
-	});
-  </script>
+    <script>
+        console.log({
+            'Email': 'zhamppx.wrp@gmail.com',
+            'Groups': {},
+            'Id': 97,
+            'IsHidddenInUI': false,
+            'IsSiteAdmin': false,
+            'LoginName': 'i:0#.w|virtualdomain\\user1',
+            'PrincipalType': 1,
+            'Title': 'user1'
+        });
+    </script>
 </body>
 </html>
