--- a/Listing1-3-Placeholders.html
+++ b/Listing1-3-Placeholders.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+
+<html>
 <head>
-  <title>zhamppx97</title>
+    <title>zhamppx97</title>
 </head>
 <body>
-  <script>
-    var greet = "Hello", who = "World";
-	console.log("%s, %s!", greet, who);
-  </script>
+    <script>
+        var greet = "Hello", who = "World";
+        console.log("%s, %s!", greet, who);
+    </script>
 </body>
 </html>
